[workspace]
members = [
    "kommand-watch",
    "kommand-echo",
]

[workspace.package]
version = "2.3.0"
edition = "2021"
authors = ["BppleMan"]

[package]
name = "kommand-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "kommand_core"
crate-type = ["rlib", "staticlib"]

[dependencies]

[build-dependencies]
cbindgen = "0.26.0"
