[package]
name = "kommand_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]

[build-dependencies]
cbindgen = "0.25.0"

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "/Users/bppleman/.rustup/toolchains/stable-x86_64-apple-darwin/lib/rustlib/x86_64-pc-windows-gnu:/Users/bppleman/.konan/dependencies/msys2-mingw-w64-x86_64-2/x86_64-w64-mingw32"
panic_immediate_abort = false
