[package]
name = "kommand-watch"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-debouncer-mini = "0.4.1"
color-eyre = "0.6.2"
tokio = { version = "1.35.1", features = ["rt", "signal", "macros"] }
lazy_static = "1.4.0"
fs_extra = "1.3.0"
walkdir = "2.4.0"
